--- a/app/src/main/res/layout/fragment_add_tracker_with_pin_code.xml
+++ b/app/src/main/res/layout/fragment_add_tracker_with_pin_code.xml
@@ -14,13 +14,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        <include
+            layout="@layout/toolbar_gpsping_typical"
+            app:title="@{@string/addTracker}" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -59,7 +55,7 @@
                             android:hint="@string/imeiNumber"
                             android:imeOptions="actionNext"
                             android:inputType="number"
-                            android:singleLine="true"
+                            android:maxLines="1"
                             app:twoWayText="@{viewModel.trackerIMEI}" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -74,10 +70,10 @@
                             android:layout_height="wrap_content"
                             android:digits="0123456789"
                             android:hint="@string/trackerLast4Digits"
-                            android:imeOptions="actionNext"
+                            android:imeOptions="actionDone"
                             android:inputType="number"
                             android:maxLength="4"
-                            android:singleLine="true"
+                            android:maxLines="1"
                             app:twoWayText="@{viewModel.trackerLast4DigitsOfNumber}" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -85,7 +81,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/addTrackerButton"
+                    android:id="@+id/addTrackerBtn"
                     style="@style/AppTheme.widget.Button.Green"
                     android:layout_width="match_parent"
                     android:layout_marginBottom="24dp"
@@ -94,7 +90,7 @@
                     android:text="@string/addTracker" />
 
                 <TextView
-                    android:id="@+id/skipAddTracker"
+                    android:id="@+id/skipAddTrackerBtn"
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
                     android:layout_gravity="center_horizontal"
@@ -110,28 +106,30 @@
         </ScrollView>
 
         <LinearLayout
-            android:id="@+id/newTrackerHelp"
+            android:id="@+id/newTrackerHelpBtn"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_gravity="bottom"
+            android:layout_marginBottom="4dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             android:background="#a0ffffff">
 
             <ImageView
-                android:layout_marginLeft="16dp"
-                android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="16dp"
                 android:src="@drawable/ic_add_new_help" />
+
             <TextView
-                android:layout_marginLeft="24dp"
-                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginLeft="24dp"
                 android:text="@string/helpNewTracker"
                 android:textColor="@color/colorAccent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textSize="18sp" />
         </LinearLayout>
     </FrameLayout>
 
