--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -15,13 +15,9 @@
         android:background="@color/whiteHover"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        <include
+            layout="@layout/toolbar_gpsping_typical"
+            app:title="@{@string/friends}" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/friendsRecycler"
