--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -14,27 +14,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@string/settings"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-        </FrameLayout>
+        <include
+            layout="@layout/toolbar_gpsping_typical"
+            app:title="@{@string/settings}" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -45,13 +27,6 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical">
-
-                <!--<TextView-->
-                <!--android:id="@+id/trackers"-->
-                <!--style="@style/AppTheme.widget.Button.Green"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:layout_marginTop="@dimen/button_margin_top"-->
-                <!--android:text="@string/trackers" />-->
 
                 <TextView
                     android:id="@+id/connect"
