--- a/app/src/main/res/layout/fragment_trackers.xml
+++ b/app/src/main/res/layout/fragment_trackers.xml
@@ -15,28 +15,9 @@
         android:background="@color/whiteHover"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@string/trackers"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-
-        </FrameLayout>
+        <include
+            layout="@layout/toolbar_gpsping_typical"
+            app:title="@{@string/trackers}" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/trackersRecycler"
