--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -443,7 +443,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginBottom="?attr/actionBarSize"
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
                 android:background="@color/white"
@@ -453,11 +452,20 @@
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="4dp">
 
-                    <LinearLayout
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_call"
+                        app:civ_border_color="@color/colorPrimary"
+                        app:civ_border_width="2dp" />
+
+                    <FrameLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="48dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -465,52 +473,66 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/black"
-                            android:textSize="18sp"
+                            android:textSize="20sp"
                             tools:text="@string/joe_tools" />
 
-                        <TextView
-                            android:id="@+id/tvLastSeen"
+                        <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="12sp"
-                            tools:text="@string/last_seen_tools" />
-
-                        <TextView
-                            android:id="@+id/tvGRSM"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="12sp"
-                            tools:text="@string/grsm_tools" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:orientation="vertical"
-                        android:padding="2dp">
-
-                        <ImageView
-                            android:id="@+id/ivBattery"
-                            android:layout_width="32dp"
                             android:layout_height="20dp"
-                            android:layout_gravity="end"
-                            tools:src="@drawable/battery_75" />
+                            android:layout_gravity="bottom"
+                            android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/tvPercentages"
-                            android:layout_width="32dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="end|center"
-                            android:layout_marginTop="4dp"
-                            android:gravity="center"
-                            android:text="@string/seventy_five_tools"
-                            android:textColor="@color/green"
-                            android:textStyle="bold" />
+                            <ImageView
+                                android:id="@+id/ivBattery"
+                                android:layout_width="24dp"
+                                android:layout_height="12dp"
+                                android:layout_gravity="center_vertical"
+                                tools:src="@drawable/battery_75" />
 
-                    </LinearLayout>
+                            <TextView
+                                android:id="@+id/tvPercentages"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginLeft="4dp"
+                                android:textColor="@color/green"
+                                android:textStyle="bold"
+                                tools:text="@string/seventy_five_tools" />
+
+                        </LinearLayout>
+
+                    </FrameLayout>
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/callBtn"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="end"
+                        android:src="@drawable/ic_call"
+                        app:civ_border_color="@color/colorPrimary"
+                        app:civ_border_width="2dp" />
 
                 </FrameLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvLastSeen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        tools:text="@string/last_seen_tools" />
+
+                    <TextView
+                        android:id="@+id/tvGRSM"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        tools:text="@string/grsm_tools" />
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -528,12 +550,36 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:maxLines="1"
+                            android:text="@string/speed"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/tvSpeed"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            tools:text="@string/speed_tools" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:maxLines="1"
                             android:text="@string/distance"
                             android:textSize="12sp" />
 
@@ -550,13 +596,13 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="3"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
+                            android:maxLines="1"
                             android:text="@string/distanceTravelled"
                             android:textSize="12sp" />
 
@@ -564,7 +610,6 @@
                             android:id="@+id/tvDistanceTravelled"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             tools:text="@string/distance_travelled_tools" />
