--- a/app/src/main/res/layout/fragment_edit_tracker.xml
+++ b/app/src/main/res/layout/fragment_edit_tracker.xml
@@ -29,19 +29,35 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/startStopBtn"
+                    android:id="@+id/startBtn"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/circle_button"
+                    android:background="@drawable/circle_button_green"
                     android:gravity="center"
-                    android:text="@{viewModel.tracker.isRunning?@string/stop:@string/start}"
+                    android:text="@string/start"
                     android:textAllCaps="true"
                     android:textColor="#fff"
                     android:textSize="32sp"
                     android:textStyle="bold"
-                    tools:text="@string/start" />
+                    android:visibility="@{!viewModel.isRunningTracker}" />
+
+                <TextView
+                    android:id="@+id/stopBtn"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/circle_button_red"
+                    android:gravity="center"
+                    android:text="@string/stop"
+                    android:textAllCaps="true"
+                    android:textColor="#fff"
+                    android:textSize="32sp"
+                    android:textStyle="bold"
+                    android:visibility="@{viewModel.isRunningTracker}"
+                    tools:visibility="gone" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
