--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -64,7 +64,7 @@
                     android:layout_height="200dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="4dp"
-                    android:background="@drawable/circle_button"
+                    android:background="@drawable/circle_button_green"
                     android:gravity="center"
                     android:text="@{viewModel.activeTracker.isRunning?@string/stop:@string/start}"
                     android:textAllCaps="true"
