--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,9 +23,9 @@
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -54,26 +54,8 @@
                             android:hint="@string/userName"
                             android:imeOptions="actionNext"
                             android:inputType="textPersonName"
-                            android:singleLine="true"
+                            android:maxLines="1"
                             app:twoWayText="@{viewModel.profile.username}" />
-                    </android.support.design.widget.TextInputLayout>
-
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        app:error="@{viewModel.emailError}">
-
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:enabled="false"
-                            android:hint="@string/email"
-                            android:imeOptions="actionNext"
-                            android:inputType="textEmailAddress"
-                            android:singleLine="true"
-                            app:twoWayText="@{viewModel.profile.email}" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -88,10 +70,9 @@
                             android:hint="@string/fullName"
                             android:imeOptions="actionNext"
                             android:inputType="textPersonName"
-                            android:singleLine="true"
+                            android:maxLines="1"
                             app:twoWayText="@{viewModel.profile.displayname}" />
                     </android.support.design.widget.TextInputLayout>
-
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
@@ -105,10 +86,9 @@
                             android:hint="@string/address"
                             android:imeOptions="actionNext"
                             android:inputType="textPostalAddress"
-                            android:singleLine="true"
+                            android:maxLines="1"
                             app:twoWayText="@{viewModel.profile.address}" />
                     </android.support.design.widget.TextInputLayout>
-
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
@@ -122,7 +102,7 @@
                             android:hint="@string/zipCode"
                             android:imeOptions="actionNext"
                             android:inputType="text"
-                            android:singleLine="true"
+                            android:maxLines="1"
                             app:twoWayText="@{viewModel.profile.zipCode}" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -138,7 +118,7 @@
                             android:hint="@string/city"
                             android:imeOptions="actionNext"
                             android:inputType="textPostalAddress"
-                            android:singleLine="true"
+                            android:maxLines="1"
                             app:twoWayText="@{viewModel.profile.city}" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -154,7 +134,7 @@
                             android:hint="@string/country"
                             android:imeOptions="actionNext"
                             android:inputType="textPostalAddress"
-                            android:singleLine="true"
+                            android:maxLines="1"
                             app:twoWayText="@{viewModel.profile.country}" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -165,6 +145,7 @@
                         <FrameLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
+
                             <android.support.design.widget.TextInputLayout
                                 android:layout_width="72dp"
                                 android:layout_height="wrap_content"
@@ -174,57 +155,72 @@
                                 <EditText
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:digits="0123456789"
                                     android:hint="@string/code"
                                     android:imeOptions="actionNext"
-                                    android:singleLine="true"
-                                    android:maxLength="4"
                                     android:inputType="number"
-                                    android:digits="0123456789"
+                                    android:maxLength="4"
+                                    android:maxLines="1"
                                     android:paddingLeft="16dp"
                                     app:twoWayText="@{viewModel.profile.phoneCode}" />
                             </android.support.design.widget.TextInputLayout>
 
                             <TextView
-                                android:layout_marginTop="12dp"
-                                android:layout_gravity="center_vertical"
-                                android:text="+"
-                                android:layout_marginLeft="4dp"
-                                android:textColor="@color/mainTextColor"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginLeft="4dp"
+                                android:layout_marginTop="12dp"
+                                android:text="+"
+                                android:textColor="@color/mainTextColor" />
                         </FrameLayout>
 
 
                         <android.support.design.widget.TextInputLayout
                             android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="16dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
                             android:layout_marginTop="16dp"
+                            android:layout_weight="1"
                             app:error="@{viewModel.phoneNumberError}">
 
                             <EditText
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:digits="0123456789"
                                 android:hint="@string/phoneNumber"
                                 android:imeOptions="actionDone"
-                                android:singleLine="true"
                                 android:inputType="number"
-                                android:digits="0123456789"
                                 android:maxLength="10"
+                                android:maxLines="1"
                                 app:twoWayText="@{viewModel.profile.phoneNumber}" />
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
 
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:error="@{viewModel.emailError}">
 
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:enabled="false"
+                            android:hint="@string/email"
+                            android:imeOptions="actionNext"
+                            android:inputType="textEmailAddress"
+                            android:maxLines="1"
+                            app:twoWayText="@{viewModel.profile.email}" />
+                    </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/buttonSave"
                     style="@style/AppTheme.widget.Button.Green"
-                    android:layout_marginTop="@dimen/button_margin_top"
                     android:layout_marginBottom="24dp"
+                    android:layout_marginTop="@dimen/button_margin_top"
                     android:text="@string/save" />
             </LinearLayout>
         </ScrollView>
