--- a/app/src/main/res/layout/fragment_add_friend.xml
+++ b/app/src/main/res/layout/fragment_add_friend.xml
@@ -13,19 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/whiteHover"
-        android:gravity="center"
         android:orientation="vertical">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appBar"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+            android:layout_height="?attr/actionBarSize">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="match_parent"
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -34,7 +31,8 @@
                 android:id="@+id/searchFriend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="52dp"
                 android:layout_marginRight="16dp"
                 android:drawableRight="@drawable/ic_search"
                 android:hint="@string/search"
@@ -45,13 +43,12 @@
 
                 <requestFocus />
             </EditText>
-
-        </android.support.design.widget.AppBarLayout>
+        </FrameLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/friendsRecycler"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 </layout>
