--- a/app/src/main/res/layout/item_faq.xml
+++ b/app/src/main/res/layout/item_faq.xml
@@ -32,19 +32,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableRight="@drawable/ic_action_arrow_right"
-            android:paddingBottom="12dp"
-            android:paddingLeft="16dp"
-            android:paddingTop="12dp"
+            android:paddingBottom="@dimen/twelve_margin"
+            android:paddingLeft="@dimen/sixteen_margin"
+            android:paddingRight="6dp"
+            android:paddingTop="@dimen/twelve_margin"
             android:text="@{item.question}"
             android:textColor="@color/colorAccent"
-            android:textSize="20sp"
+            android:textSize="16sp"
             tools:text="Hello" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_gravity="bottom"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="@dimen/sixteen_margin"
+            android:layout_marginRight="@dimen/sixteen_margin"
             android:background="@color/colorAccent" />
     </FrameLayout>
 </layout>
