--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:paddingRight="32dp"
-                    android:singleLine="true"
+                    android:maxLines="1"
                     android:text='@{item.getName()}'
                     android:textColor="@color/mainTextColor"
                     android:textSize="24sp" />
