--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="colorBackgroundNavigationBottom">#F8F8F8</color>
     <color name="colorUnchecked">#A3A3A3</color>
 
+    <color name="colorGradientTop">#e6ffffff</color>
+    <color name="colorGradientBottom">#00ffffff</color>
+
 </resources>
