[chg] added new images for FriendsFragment. changed xml-resourse

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -17,7 +17,7 @@
 
         <include
             layout="@layout/toolbar_gpsping_typical"
-            app:title="@{@string/friends}" />
+            app:title="@{@string/connect}" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/friendsRecycler"
