[chg] fixed display photos of dogs in list trackers and in EditTrackerFragment.

--- a/app/src/main/res/layout/fragment_edit_tracker.xml
+++ b/app/src/main/res/layout/fragment_edit_tracker.xml
@@ -522,6 +522,7 @@
                         android:src="@drawable/ic_photo_plus" />
 
                     <ImageView
+                        android:scaleType="centerCrop"
                         android:id="@+id/photo"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
